web/css/clira.css
/* ... */
div#input-top .logo {
    float: left;
    margin: 0px 10px 0px 10px;
}

form#target-input-form, 
form#command-input-form {
    display: inline-block;
}

div#target-top, 
div#command-top {
    display: inline-block;
    float: left;
    margin: 10px 5px 0px 0px;
    width: 100%;
}

div#command-top .input-box {
    height: 32px;
    min-width: 500px;
    padding: 1px;
    background-color: #fff;
    width: 100%;
}

div#command-top .focus-off {
    border: solid 1px rgb(180, 180, 200);
}

div#command-top .focus-on {
    border: solid 1px rgb(180, 180, 200);
    box-shadow: 0px 0px 8px rgba(100, 100, 200, 0.5);
}

div#input-top .input-enter {
    margin: 10px 0px 10px 0px;
    float: left;
}

input.command-input {
    font-family: Verdana, Arial, Helvetica, sans-serif ;
    font-family: monospace;
    font-size: 12px;
}

div#output-top {
    margin-bottom: 20px;
}

div.output-wrapper {
/*    border: 1px solid blue; */
    margin-top: 5px;
    background: white;
    padding: 0px;
}

div.output-header button {
    margin-right: 4px;
}

div.output-header {
    padding: 4px;
}

div.output-header div.target-value {
    margin-left: 4px;
}

div.output-header div.command-value {
    margin-right: 4px;
}

div.output-header div.target-value, 
div.output-header div.command-value {
    font-weight: normal;
    font-size: 12px;
}

div.target-value, 
input.target-value {
    display: inline-block;
    font-size: 12px;
    font-family: Verdana, Arial, Helvetica, sans-serif ;
}

div.label {
    display: inline;
    padding-left: 3px;
    padding-right: 3px;
    font-size: 12px;
}

div.command-value, 
input.command-value {
    display: inline-block;
    font-size: 14px;
}

div.command-number {
    display: inline-block;
    font-size: 70%;
    float: right;
}

div#ember-view .output-content {
    float: left;
    position: relative;
}

div.output-content {
    display: block;
    font-size: 12px;
    padding: 10px;
}

div.icon-box {
    display: inline-block;
    margin-right: 5px;
}

div#debug-title {
    display: inline-block;
}

img.icon {
    height: 16px;
    vertical-align: middle;
}

.buttonish {
    text-align: center;
    text-decoration: none;
    text-shadow: -1px -1px 2px #777777;
    text-shadow: rgba(10, 10, 10, 0.5) 1px 2px 2px;
}

input.text-entry {
    border: 0;
    outline: 0;
    height: 20px;
    width: 100%;
}

.rounded {
    border: 1px solid #659635;
    background: #99ca28;
    padding: 2px 8px 2px 8px;

    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

.green {
    color: #ffffff;
    background: linear-gradient(top,
		#5da331 0%,  #659635 2%, #9bcb2a 97%, #cfe782 100%);
    background: -moz-linear-gradient(top,
		#5da331 0%,  #659635 2%, #9bcb2a 97%, #cfe782 100%);
    background: -webkit-linear-gradient(top,
		#5da331 0%,  #659635 2%, #9bcb2a 97%, #cfe782 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
		startColorstr='#659635', endColorstr='#9bcb2a');
}

.blue {
    color: #0c0c0c;
/*
    background: linear-gradient(top, 
		#a0a0ff 0%,  #c8c8ff 10%, #d8d8ff 90%, #f0f0ff 100%);
    background: -moz-linear-gradient(top,
		 #a0a0ff 0%,  #c8c8ff 10%, #d8d8ff 90%, #f0f0ff 100%);
    background: -webkit-linear-gradient(top,
		 #a0a0ff 0%,  #c8c8ff 10%, #d8d8ff 90%, #f0f0ff 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
		startColorstr='#a0a0ff', endColorstr='#f0f0ff');
*/
}

.jquery-checkbox {
    line-height: 24px;
}

ul.setupgrid {
    padding: 0;
    list-style: none;
    margin: 0 auto;
}

ul.setupgrid li {
    float: left;
    padding: 10px;
    border: 1px solid #cbcad0;
    margin: 0 5px 10px 5px;
}

div.setupgrid {
   font-family: 'GraublauWeb', arial, serif;
   text-align: center;
}

.setupgrid a {
    height: 32px;
    width: 64px;
    display: block;
    padding-top: 32px;
    text-decoration: none;
}

.setupgrid a#prefs-devices {
    background: url(/images/prefs-devices.png) no-repeat center top;
}

.setupgrid a#prefs-groups {
    background: url(/images/prefs-groups.png) no-repeat center top;
}

.setupgrid a#prefs-general {
    background: url(/images/prefs-general.png) no-repeat center top;
}

div.input {
    background: #e0e0ff;
    padding: 10px;
}

div.parse {
    background: #b0b0b0;
    border: 1px solid black;
}

div.input-debug {
    background: #ffe0e0;
    border-bottom: 1px solid black;
    padding: 10px;
    font-weight: bold;
}

div.possibility-debug {
    background: #ffe0e0;
    padding: 10px;
    border-bottom: 1px dotted red;
}

div.match-debug {
    display: inline-block;
    padding: 5px;
}

div.command-token, 
div.command-token div {
    display: inline-block;
}

div.parse-details {
/*    display: none; */
}

div.command-line {
    font-weight: bold;
}

div.match-details {
    display: inline-block;
}

div.possibility {
/*    background: #ffe0e0; */
    padding: 10px;
    border-bottom: 1px dotted red;
}

div.parse-implicit-keyword, 
div.parse-token, 
div.parse-trailing, 
div.parse-missing {
    display: inline-block;
}

div.parse-implicit-keyword, 
div.parse-trailing, 
div.parse-missing {
    font-style: italic;
    font-weight: normal;
}

div.parse-token {
    font-weight: bold;
}

div.parse-mandatory {
    color: red;
    display: inline-block;
}

div.parse-mandatory-value {
    color: red;
    font-style: italic;
    display: inline-block;
}

div.output-content div.parse:first-of-type {
    display: none;
}

div.command-help {
    font-size: smaller;
    font-style: italic;
    padding-left: 20px;
    padding-bottom: 5px;
}

img.rendered {
    float: left;
    margin-right: 5px;
    max-width: 16px;
    vertical-align: middle;
}

div.map-small {
    width: 300px;
    height: 200px;
}

div.inline-dialog {
    box-shadow: none;
    margin-left: 20px;
    position: relative;
}

.inline-dialog .ui-dialog-titlebar-close {
    display: none;
}

div#prefs-title {
    font-size: 120%;
    font-weight: 600;
}
/* ... */

